--- a/Sidakpreet_Singh/requirements.txt
+++ b/Sidakpreet_Singh/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
 supervision
 ultralytics
-torch
-torchvision
 opencv-python-headless
+huggingface-hub
+# Specify CPU-only torch and torchvision for a smaller installation
+torch --index-url https://download.pytorch.org/whl/cpu
+torchvision --index-url https://download.pytorch.org/whl/cpu
