--- a/Sidakpreet_Singh/requirements.txt
+++ b/Sidakpreet_Singh/requirements.txt
@@ -1,1 +1,115 @@
-wheel==0.45.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anthropic==0.51.0
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+attrs==25.3.0
+audioread==3.0.1
+bash_kernel==0.10.0
+beautifulsoup4==4.13.4
+bleach==6.2.0
+blis==1.2.1
+bokeh==3.7.3
+catalogue==2.0.10
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+cloudpathlib==0.21.1
+comm==0.2.2
+confection==0.1.5
+contourpy==1.3.2
+cycler==0.12.1
+cymem==2.0.11
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+distro==1.9.0
+e2b-charts==0.0.3
+et_xmlfile==2.0.0
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+filetype==1.2.0
+fonttools==4.58.0
+fqdn==1.5.1
+frozenlist==1.6.0
+fsspec==2025.3.2
+gensim==4.3.3
+geographiclib==2.0
+geopandas==1.0.1
+geopy==2.4.1
+googletrans==4.0.2
+graphviz==0.20.3
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.31.4
+hyperframe==6.1.0
+idna==3.10
+imageio==2.37.0
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.10.0
+joblib==1.5.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter-events==0.12.0
+jupyter_server==2.16.0
+jupyter_server_terminals==0.5.3
+jupyterlab_pygments==0.3.0
+kaleido==0.2.1
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.4
+librosa==0.11.0
+llvmlite==0.44.0
+lxml==5.4.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.3
+mlx==0.25.2
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.4.4
+murmurhash==1.0.12
+mutagen==1.47.0
+narwhals==1.40.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numba==0.61.2
+numpy==1.26.4
+openai==1.79.0
+opencv-python==4.11.0.86
+openpyxl==3.1.5
+orjson==3.10.18
+overrides==7.7.0
+packaging==25.0
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+patsy
